2010-03-04  Xerxes Rånby  <xerxes@zafena.se>

	* ports/hotspot/src/share/vm/shark/sharkCompiler.cpp
	(sharkCompiler::sharkCompiler): Move mattr define to make its memory
	valid in the scope where it are used by the args vector.

2010-03-01  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(stamps/cacao.stamp): Depend on rt.stamp
	and use updated rt.jar to build against rather
	than the contents of lib/rt, so that --with-openjdk
	builds work.

2010-03-01  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(stamps/jtreg.stamp): Depend on
	stamps/icedtea-stage2.stamp

2010-06-01 Andrew John Hughes  <ahughes@redhat.com>

	* patches/icedtea-jaxws-getdtdtype.patch:
	Moved to...
	* Makefile.am:
	Move jaxws patch to bootstrap subdirectory.
	* patches/boot/jaxws-getdtdtype.patch:
	...here.

2010-06-01 Andrew John Hughes  <ahughes@redhat.com>

	Drop fake tools.jar in bootstrap JDK.
	* Makefile.am:
	(.PHONY): Remove clean-tools-jar.
	(bootstrap-directory-stage1.stamp): Remove
	tools.jar symlink; can be avoided by patching
	HotSpot as part of  patch below.
	(bootstrap/jdk1.7.0/lib/tools.jar): Removed.
	(clean-tools-jar): Likewise.
	(plugs.stamp): Remove dependency on tools.jar.
	(clean-plugs): Remove dependency on clean-tools-jar.
	* patches/boot/icedtea-hotspot-default.patch:
	Remove references to tools.jar, setting SA_CLASSPATH
	to rt.jar instead of tools.jar.

2010-06-01 Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am: Update langtools
	changeset ID and sha256 sum to bring in
	fix to no-fork genstubs classpath:
	http://hg.openjdk.java.net/icedtea/jdk7/langtools/rev/681f1f51926f

2010-02-26  Xerxes Rånby  <xerxes@zafena.se>

	* ports/hotspot/src/share/vm/shark/sharkCompiler.cpp
	(SharkCompiler::generate_native_code): Undefine debug code for
	NDEBUG builds

2010-02-24 Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am: Add THANKYOU to
	EXTRA_DIST.
	* pulseaudio/AUTHORS: Removed; duplicates
	top-level file.
